# Racer

./: .gitignore  CGFrontendAction.h  CGFrontendAction.h~  CMakeLists.txt  CMakeLists.txt~  TimerWrapper.cpp  TimerWrapper.h  analyse_cfg.h  callGraphAnalysis.h  cgFrontendAction.h~  commandOptions.h  commandOptions.h~  eventHandler.h  flowSensitivePA.cpp  flowSensitivePA.h  globalVarHandler.cpp  globalVarHandler.cpp~  globalVarHandler.h  headerDepAnalysis.h  macros.h  processHeader.h~  raceAnalysis.cpp  raceAnalysis.cpp~  raceAnalysis.h  racer.cpp  remassrt_main.cpp  steengaardPA.cpp  steengaardPA.h  steengaardPA.h~  steengaardPAVisitor.cpp  steengaardPAVisitor.cpp~  steengaardPAVisitor.h  symTabBuilder.cpp  symTabBuilder.cpp~  symTabBuilder.h  symtab.cpp  symtab.h
libExt/: CallGraphCtu.cpp  CallGraphCtu.cpp~  CallGraphCtu.h  CallGraphCtu.h~  CompilerInstanceCtu.cpp  CompilerInstanceCtu.cpp~  CompilerInstanceCtu.h  CompilerInstanceCtu.h~  introduction.tex  introduction.tex~
test/data/: A.c  AtoGPrint.dot  B.c  C.c  CMakeLists.txt  D.c  E.c  F.c  G.c  alphaprinter.c  buzz.c  compile_commands.json  fizz.c  fizzbuzz.c
test/data/include/: buzzers.h  letters.h
test/include/: fft.h  globals.h
test/src_dev/: CMakeLists.txt  fft.c  fft.c~  main.c  task1.c  task1.c~  task2.c
utility_scripts/: compile_command_wrapper.py
utils/: compile_command_wrapper.py
utils/docker/: Dockerfile
